# invoice-generator

./: .coveragerc  .cruft.json  .envrc  .gitignore  .pre-commit-config.yaml  Justfile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: copilot-instructions.md  settings.yml
.github/workflows/: checks.yaml  release.yaml
docs/: index.md
invoice_generator/: __init__.py  app.py  backend.py  config.py  io.py  model.py
invoice_generator/controller/: __init__.py  app_controller.py
invoice_generator/model/: __init__.py
invoice_generator/view/: __init__.py  main_window.py
tests/: test_import_quote.py  test_model_and_config.py  test_packaging_attribute.py  test_pdf_export.py  test_totals_and_numbering.py
